--- a/progetto/discolandia/css/grafica.css
+++ b/progetto/discolandia/css/grafica.css
@@ -8,7 +8,7 @@ body{
 
 .header{
     width: 100%;
-    height: 200px;
+    //height: 200px;
     text-align: center;
     background-color: #8E151E;
 }
