--- a/progetto/discolandia/css/grafica.css
+++ b/progetto/discolandia/css/grafica.css
@@ -4,13 +4,12 @@ body{
     float: left;
     font: 16px Arial, Helvetica, sans-serif;
     color: black;
+    background-color: #8E151E;
 }
 
 .header{
     width: 100%;
-    //height: 200px;
     text-align: center;
-    background-color: #8E151E;
 }
  
 //Carico il font scelto per il titolo
@@ -28,9 +27,9 @@ body{
 }
 
 .leftBar{
-
+    background-color: white;
     border: solid 1px grey;
-    width: 20%;
+    width: 18.5%;
     float: left;
     min-height: 500px;
 }
@@ -40,9 +39,9 @@ body{
 }
 
 .rightBar{
-
+    background-color: white;
     border: solid 1px grey;
-    width: 20%;
+    width: 18.5%;
     min-height: 500px;
     float: right;
 }
