--- a/progetto/discolandia/css/grafica.css
+++ b/progetto/discolandia/css/grafica.css
@@ -164,6 +164,7 @@ body{
     width: 90%;
     margin-left: auto;
     margin-right: auto;
+    border: 1px solid;
 }
 .tabella_disco{
     width: 40%;
