--- a/progetto/discolandia/css/grafica.css
+++ b/progetto/discolandia/css/grafica.css
@@ -165,6 +165,7 @@ body{
     margin-left: auto;
     margin-right: auto;
     border: 1px solid;
+    text-align: center;
 }
 .tabella_disco{
     width: 40%;
@@ -177,4 +178,7 @@ body{
 }
 .tabella_remove{
     width: 20%;
+}
+td{
+    border: 1px solid;
 }
