--- a/progetto/discolandia/css/grafica.css
+++ b/progetto/discolandia/css/grafica.css
@@ -179,7 +179,7 @@ body{
 .tabella_remove{
     width: 20%;
 }
-td{
-    border: 1px solid;
+table, th, td {
+    border: 1px solid black;
     border-collapse: collapse;
 }
